ChatBot: первый тест

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Db Props jdbc:postgresql://vjuh-prom.cyzme4yzbrhj.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://vjuh-prom.cyzme4yzbrhj.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Qwerty67
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
+bot.token=1316571024:AAF9M6Qz0rOl2mRkN-f8kp6_MfPBlkC1-5M
 
