--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 bot.token=1316571024:AAF9M6Qz0rOl2mRkN-f8kp6_MfPBlkC1-5M
+server.port=5000
 
