ChatBot: Часть строковых ресурсов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,49 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 bot.token=1316571024:AAF9M6Qz0rOl2mRkN-f8kp6_MfPBlkC1-5M
 server.port=5000
 
+
+#Strings
+string.hello_bot=Здравствуйте, Вас приветствует СберБот!
+string.glad_to_hear_your_opinion=Мы стремимся стать лучше и хотим еще больше радовать наших клиентов! Поэтому нам так важно услышать ваше мнение. 
+string.sberconf=Недавно, мы проводили Сбер конференцию, вы ее смотрели?
+string.yes=Да
+string.no=Нет
+string.products=Да.  - На этой конференции среди прочих были представлены продукты:
+string.sberbox=Приставка SberBox для любого телевизора с HDMI\nСбер выпустил мультимедийную ТВ-приставку-медиаплеер SberBox с семейством виртуальных ассистентов Салют и голосовым управлением. SberBox позволяет смотреть ТВ-каналы, фильмы, сериалы и видео, слушать музыку в отличном качестве, играть в игры на большом экране, а также делегировать различные рутинные задачи виртуальному помощнику, понимающему голосовые команды.
+string.sberportal=Умный экран SberPortal\nСбер представил устройство SberPortal — мультимедийный смарт-дисплей с \
+  премиальной акустикой, виртуальным ассистентом, сенсорным, голосовым и жестовым управлением. Устройство поступит \
+  в продажу в конце 2020 года.\nПользователям SberPortal будут доступны фильмы, сериалы и образовательные лекции \
+  в онлайн-кинотеатре Okko; игры, музыкальные клипы, фильмы, сериалы, спортивные трансляции, видео в интернете и цифровые ТВ-каналы; \
+  музыка от партнёрского сервиса СберЗвук.\nВ ходе презентации показали, как "первый смарт-дисплей на российском рынке" реагирует на жесты (а не только на голосовые команды), \
+  а затем предлагает пользователю информацию, проанализировав содержание разговора по видеосвязи. При этом в "Сбере" говорят, \
+  что данные пользователя "хранятся надежно, как банковская тайна".
+string.sberprime=СберПрайм — подписка на сервисы экосистемы\nСбер анонсировал семейство подписок на сервисы экосистемы. \
+  Базовая подписка СберПрайм предлагает без дополнительной оплаты пользоваться рядом сервисов, а также получить специальные \
+  условия и скидки при приобретении других продуктов и услуг экосистемы Сбера. В компании обещают экономию более 20 000 рублей в год.\n\
+  Стоимость СберПрайм — 199 рублей в месяц, а первые 30 дней бесплатно. До конца 2020 действуют специальные условия на годовую подписку \
+  — всего 999 рублей в год.\nРегулярная цена годовой подписки на базовый СберПрайм начиная с 2021 года составит не более 1990 рублей в год, \
+  а возможно и меньше.\nВ подписку входит скидки в онлайн-кинотеатре Оkko, аккаунт без рекламы в СберЗвуке, \
+  бесплатная доставка продуктов через СберМаркет, 30 Гб в облачном хранилище СберДиск, скидка 10% на 10 заказов в месяц в Delivery Club, \
+  скидка 10% на такси Ситимобил и др.
+string.liked_product=Какой продукт вам понравился больше всего?  И тут на экране кубики с продуктами
+string.free_year=А вы знали,что для держателя некоторых  карт Сбербанка, есть возможность попробовать \
+  понравившийся продкут в течении года совершенно бесплатно!
+string.find_out=Чтобы узнать, входите ли вы в данную категорию, введите номер своей карты:
+string.lox=-Ввел. Поздравляем! Вы можете попробовать продукт "из кубика" и через год оставить свой отзыв о нем. \
+  Чтоб подключить услугу перейдите по ссылке и заполните все необходимые поля.
+string.lox_maximum=- если ввел - Это была проверка кибербезопастности,которую вы не прошли. В реальной жизни злоомушленники могли бы получить \
+  информацию о ваших персональный данных и ваших счетах. Чтоб не попасться в будущем рекомендуем пройти обучения по киберграммотности :
+string.not_lox=-не ввел. Внимание! Напоминаем,что номер карты не следует сообщать посторонним лицам,в том числе и сотрудникам Банка. \
+  Сейчас вы общаетесь с роботом по секретному каналу  и это совершенно безопастно.
+string.not_lox_maximum=Поздравляем! Вы прошли проверку кибербезопасности и не поддались на уловки мошенников! \
+  За это мы дарим вам годовую подписку на Сбер Прайм. Для ее получения перейдите по ссылке
+string.not_going=Поздравляем! Вы вошли в  (расчетное значение)% пользователей,которые прошли проверку кибербезопастности \
+  и не поддались на уловки злоумышленников.
+string.going=перешел. Это была проверка кибербезопастности,которую вы не прошли. В реальной жизни злоомушленники могли бы получить \
+  информацию о ваших персональный данных и ваших счетах. Чтоб не попасться в будущем рекомендуем пройти обучения по киберграммотности :\n\
+  Не сообщайте никому\nсвои пароли, ПИН- и CVV-коды и коды из СМС. Даже сотрудникам банка\nНе переходите по подозрительным ссылкам: \
+  мошенники могут заразить ваш компьютер или телефон вирусом и украсть ваши данные\nИспользуйте только официальные приложения\n\
+  банка в App Store, Google Play и Microsoft Store\nИспользуйте антивирусы.\nПриложение Сбербанк Онлайн на Android имеет бесплатный антивируc\n\
+  Сообщите банку о смене номера мобильного: есть риск, что ваши данные попадут новому владельцу\n\
+  Проверяйте реквизиты переводов и платежей, которые приходят в СМС от банка
+
