ChatBot: Строковые ресурсы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,60 @@ string.going=перешел. Это была проверка кибербезо
   Сообщите банку о смене номера мобильного: есть риск, что ваши данные попадут новому владельцу\n\
   Проверяйте реквизиты переводов и платежей, которые приходят в СМС от банка
 
+#Strings for test
+string.test.right=Правильно!
+string.test.card_number_full=Для перевода нужен только номер карты, а чаще всего достаточно номера вашего мобильного телефона. ПИН- и CVV-коды от банковских карт не следует сообщать никому, даже сотрудникам банка.
+string.test.card_number=Для перевода нужен только номер карты, а чаще всего достаточно номера вашего мобильного телефона. 
+string.test.dont_tell=ПИН- и CVV-коды от банковских карт не следует сообщать никому, даже сотрудникам банка.
+string.test.sms_reseived=Вам пришла СМС, что карта заблокирована, а разблокировать можно по ссылке из СМС. Что будете делать?
+string.test.sms_reseivedA=Перейду по ссылке
+string.test.sms_reseivedB=Удалю СМС
+string.test.sms_reseivedC=Позвоню по номеру, с которого пришло СМС
+string.test.virus=По ссылке может быть приложение с вирусом, которое загрузится на телефон, или сайт-ловушка, на котором мошенники попытаются получить номера банковских карт, ПИН- и CVV-коды.
+string.test.phone_number_changed=Вы сменили номер телефона, к которому привязана банковская карта. Какие ваши дальнейшие действия?
+string.test.phone_number_changedA=Позвоню в банк и сообщу об этом
+string.test.phone_number_changedB=Отправлю СМС банку
+string.test.phone_number_changedC=Не буду ничего предпринимать
+string.test.call=Позвоните в банк и сообщите свой новый номер, чтобы мошенники не воспользовались вашим старым номером для перевода.
+string.test.wifi=Сидя в кафе Вы подключились к Wi-Fi без пароля и читаете новости. Вам написала подруга и попросила перевести деньги через онлайн-банк. Что будете делать?
+string.test.wifiA=Сразу переведу деньги
+string.test.wifiB=Переключусь на мобильный интернет и выполню перевод
+string.test.wifiC=Подключусь к другой открытой Wi-Fi точке и совершу перевод
+string.test.wifi_desc=Преступники легко взламывают открытые сети Wi-Fi. Поэтому для входа в онлайн-банк лучше воспользоваться мобильным интернетом
+string.test.most_leaks=Основная масса угроз информационной безопасности приходится на\nТроянские программы\nЧерви\nШпионские программы
+string.test.authentification=Какой вид идентификации и аутентификации получил наибольшее распространение?
+string.test.authentificationA=одноразовые пароли
+string.test.authentificationB=постоянные пароли
+string.test.authentificationC=системы PKI
+string.test.os=Под какие системы распространение вирусов происходит наиболее динамично ?
+string.test.osA=Windows
+string.test.osB=Android
+string.test.osC=Mac OS
+string.test.last_protection=Заключительным этапом построения системы защиты является
+string.test.last_protectionA=анализ уязвимых мест
+string.test.last_protectionB=планирование
+string.test.last_protectionC=сопровождение
+string.test.sesurity_fraud=Какие угрозы безопасности информации являются преднамеренными ?
+string.test.sesurity_fraudA=Ошибки персонала
+string.test.sesurity_fraudB=Не авторизованный доступ
+string.test.sesurity_fraudC=Открытие электронного письма, содержащего вирус
+string.test.sesurity_way=Какого подход к обеспечению безопасности имеет место ?
+string.test.sesurity_wayA=комплексный
+string.test.sesurity_wayB=теоретический
+string.test.sesurity_wayC=логический
+string.test.crypto_system=Системой криптографической защиты информации является:
+string.test.crypto_systemA=Крипто Про
+string.test.crypto_systemB=BFox Pro
+string.test.crypto_systemC=CAudit Pro
+string.test.boot_virus=Какие вирусы активизируются в самом начале работы с операционной системой ?
+string.test.boot_virusA=троянцы
+string.test.boot_virusB=загрузочные вирусы
+string.test.boot_virusC=черви
+string.test.stuxnet=Stuxnet это ...
+string.test.stuxnetA=Промышленный вирус
+string.test.stuxnetB=Троянская программа
+string.test.stuxnetC=Макровирус
+string.test.target=Таргетированная атака - ...
+string.test.targetA=Атака на конкретный компьютер пользователя
+string.test.targetB=Атака на компьютерную систему крупного предприятия
+string.test.targetC=Атака на сетевое оборудование
