--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Db Props jdbc:postgresql://vjuh-prom.cyzme4yzbrhj.us-east-2.rds.amazonaws.com:5432/postgres
+﻿#Db Props jdbc:postgresql://vjuh-prom.cyzme4yzbrhj.us-east-2.rds.amazonaws.com:5432/postgres
 #spring.datasource.url=jdbc:postgresql://vjuh-prom.cyzme4yzbrhj.us-east-2.rds.amazonaws.com:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=Qwerty67
