--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -112,3 +112,53 @@ string.test.target=Таргетированная атака - ...
 string.test.targetA=Атака на конкретный компьютер пользователя
 string.test.targetB=Атака на компьютерную систему крупного предприятия
 string.test.targetC=Атака на сетевое оборудование
+
+#Strings for edu
+string.edu.welcome=Давайте немного узнаем о правилах личной кибербезопасности!
+string.edu.t1=1. Не сообщайте никому свои пароли, ПИН- и CVV-коды и коды из СМС. Даже сотрудникам банка
+string.edu.q1=Вам звонит знакомый и говорит.что готов вернуть вам долг,но для этого ему нужно знать номер вашей карты, cvv-код и код из смс. Сообщители вы ему эти данные?
+string.edu.q1.a=Да,это мой знакомый,я ему доверяю
+string.edu.q1.b=Нет,продиктую только номер карты,этого достаточно для перевода
+string.edu.q1.c=Повешу трубку
+string.edu.e1=Для перевода нужен только номер карты, а чаще всего достаточно номера вашего мобильного телефона. ПИН- и CVV-коды от банковских карт не следует сообщать никому, даже сотрудникам банка.
+
+string.edu.t2=2. Не переходите по подозрительным ссылкам: мошенники могут заразить ваш компьютер или телефон вирусом и украсть ваши данные
+string.edu.q2=Вам пришла СМС, что карта заблокирована, а разблокировать можно по ссылке из СМС. Что будете делать?
+string.edu.q2.a=Перейду по ссылке
+string.edu.q2.b=Удалю СМС
+string.edu.q2.c=Позвоню по номеру, с которого пришло СМС
+string.edu.e2=По ссылке может быть приложение с вирусом, которое загрузится на телефон, или сайт-ловушка, на котором мошенники попытаются получить номера банковских карт, ПИН- и CVV-коды.
+
+string.edu.t3=3. Используйте только официальные приложения банка в App Store, Google Play и Microsoft Store
+string.edu.q3=Вам звонит подруга и просит срочно перевести ей деньги на телефон, но у вас не установлено приложение Сбербанк,сайт временно не доступен. Она предлагает скачать аналог приложения для пополнения счета с MnogoProgramm.com.
+string.edu.q3.a=Скачаю приложение,которое посоветовала подруга и переведу ей деньги
+string.edu.q3.b=Поищу в интернете другие приложения.через которые можно перевести деньги
+string.edu.q3.c=Дождусь,когда заработает сайт Сбербанка или скачаю приложение с Play Маркет
+string.edu.e3=Используйте только официальные приложения банка в App Store, Google Play и Microsoft Store
+
+string.edu.t4=4. Используйте антивирусы. Приложение Сбербанк Онлайн на Android имеет бесплатный антивируc
+string.edu.q4=Надо ли устанавливать на смартфон Антивирус если он уже есть в приложении Сбербанк Онлайн?
+string.edu.q4.a=Нет, встроенного антивирусника будет достаточно,чтоб обезопасить работу в приложении
+string.edu.q4.b=Да, перестраховаться всегда не помешает
+string.edu.q4.c=Да и встроенный не нужен,поищу как его отключить
+string.edu.e4=Приложение Сбербанк Онлайн на Android имеет бесплатный антивируc, который поможет сохранить конфиденциальную информацию.
+
+string.edu.t5=5.Сообщите банку о смене номера мобильного: есть риск, что ваши данные попадут новому владельцу
+string.edu.q5=Вы сменили номер телефона, к которому привязана банковская карта. Какие ваши дальнейшие действия?
+string.edu.q5.a=Позвоню в банк и сообщу об этом
+string.edu.q5.b=Отправлю СМС банку
+string.edu.q5.c=Не буду ничего предпринимать
+string.edu.e5=Позвоните в банк и сообщите свой новый номер, чтобы мошенники не воспользовались вашим старым номером для перевода.
+
+string.edu.t6=6. Проверяйте реквизиты переводов и платежей, которые приходят в СМС от банка
+string.edu.q6=Вам пришло СМС-сообщение от банка, но почему-то оно попало в отдельную переписку в телефоне. Можно ли доверять такому сообщению?
+string.edu.q6.a=Нет, это СМС от мошенников. Я его удалю.
+string.edu.q6.b=Конечно, можно. Наверное, телефон глючит.
+string.edu.e6=Все СМС от банка приходят в одну переписку. Например, Сбербанк присылает сообщения с номера 900 или 9000. Поэтому лучше удалите подозрительное сообщение и при необходимости уточните информацию в банке.
+
+string.edu.t7=7. При использовании банкомата осмотрите его и убедитесь,что на нем нет дополнительных устройст,  при наборе ПИН-кода прикрывайте клавиатуру рукой, не принимайте помощь от незнакомцев.
+string.edu.q7=Вы пришли в отделение Сбербанка, чтоб снять в банкомате деньги, на входе в отделение  установлено устройство, которое требует ПИН-код вашей карты. Ваши действия
+string.edu.q7.a=Не буду ничего вводить, позвоню на горячую линию Сбербанка и сообщу об инциденте
+string.edu.q7.b=Введу пароль, это же отделение Сбербанка и мне же надо снять деньги
+string.edu.q7.c=Просто уйду
+string.edu.e7=Если на входе в помещение с банкоматом установлено устройство, которое требует ПИН-код вашей карты, не вводите ПИН и не входите туда.
